[package]
authors.workspace = true
description = "Shared utilities between system-parachains runtimes"
edition.workspace = true
license.workspace = true
name = "system-parachains-common"
repository.workspace = true
version.workspace = true

[dependencies]
codec = { features = ["derive", "max-encoded-len"], workspace = true }
scale-info = { features = ["derive"], workspace = true }

sp-api = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }

frame-support = { workspace = true }
pallet-treasury = { workspace = true }

polkadot-runtime-common = { workspace = true }
xcm = { workspace = true }
xcm-executor = { workspace = true }


[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"pallet-treasury/std",
	"polkadot-runtime-common/std",
	"scale-info/std",
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-executor/std",
	"xcm/std",
]

runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"polkadot-runtime-common/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
	"xcm/runtime-benchmarks",
]

try-runtime = [
	"frame-support/try-runtime",
	"pallet-treasury/try-runtime",
	"polkadot-runtime-common/try-runtime",
	"sp-runtime/try-runtime",
]
