[package]
name = "system-parachains-constants"
description = "Common constants for System Parachains runtimes"
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
smallvec = { workspace = true }

frame-support = { workspace = true }
kusama-runtime-constants = { path = "../../relay/kusama/constants", default-features = false}
parachains-common = { workspace = true }
polkadot-core-primitives = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-runtime-constants = { path = "../../relay/polkadot/constants", default-features = false}
sp-runtime = { workspace = true }

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"kusama-runtime-constants/std",
	"parachains-common/std",
	"polkadot-core-primitives/std",
	"polkadot-primitives/std",
	"polkadot-runtime-constants/std",
	"sp-runtime/std",
]
