[package]
name = "system-parachains-constants"
description = "Common constants for System Parachains runtimes"
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
smallvec = { workspace = true }

frame-support = { workspace = true }
kusama-runtime-constants = { workspace = true }
parachains-common = { workspace = true }
polkadot-core-primitives = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-runtime-constants = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
xcm = { workspace = true }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"kusama-runtime-constants/std",
	"parachains-common/std",
	"polkadot-core-primitives/std",
	"polkadot-primitives/std",
	"polkadot-runtime-constants/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm/std",
]
runtime-benchmarks = [
	"kusama-runtime-constants/runtime-benchmarks",
	"polkadot-runtime-constants/runtime-benchmarks",
]