[package]
name = "system-parachains-constants"
description = "Common constants for System Parachains runtimes"
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
array-bytes = { workspace = true }
smallvec = { workspace = true }

frame-support = { workspace = true }
kusama-runtime-constants = { workspace = true }
pallet-revive = { workspace = true }
parachains-common = { workspace = true }
polkadot-core-primitives = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-runtime-constants = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
xcm = { workspace = true }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"kusama-runtime-constants/std",
	"pallet-revive/std",
	"parachains-common/std",
	"polkadot-core-primitives/std",
	"polkadot-primitives/std",
	"polkadot-runtime-constants/std",
	"sp-core/std",
	"sp-runtime/std",
	"xcm/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"kusama-runtime-constants/runtime-benchmarks",
	"pallet-revive/runtime-benchmarks",
	"parachains-common/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"polkadot-runtime-constants/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"pallet-revive/try-runtime",
	"parachains-common/try-runtime",
	"sp-runtime/try-runtime",
]
