[package]
authors = ["Encointer <info@encointer.org>"]
description = "Runtime for Encointer Network (kusama system chain)"
edition.workspace = true
homepage = "https://encointer.org"
license.workspace = true
name = 'encointer-kusama-runtime'
repository.workspace = true
version.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
  "derive",
] }
hex-literal = { version = "0.4.1", optional = true }
log = { version = "0.4.20", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = [
  "derive",
] }
smallvec = "1.13.1"

# encointer deps
encointer-balances-tx-payment = { default-features = false, version = "6.0.0" }
encointer-balances-tx-payment-rpc-runtime-api = { default-features = false, version = "6.0.0" }
encointer-primitives = { default-features = false, version = "6.0.2" }
pallet-encointer-balances = { default-features = false, version = "6.0.0" }
pallet-encointer-bazaar = { default-features = false, version = "6.0.0" }
pallet-encointer-bazaar-rpc-runtime-api = { default-features = false, version = "6.0.0" }
pallet-encointer-ceremonies = { default-features = false, version = "6.0.0" }
pallet-encointer-ceremonies-rpc-runtime-api = { default-features = false, version = "6.0.0" }
pallet-encointer-communities = { default-features = false, version = "6.0.0" }
pallet-encointer-communities-rpc-runtime-api = { default-features = false, version = "6.0.0" }
pallet-encointer-faucet = { default-features = false, version = "6.0.0" }
pallet-encointer-reputation-commitments = { default-features = false, version = "6.0.0" }
pallet-encointer-scheduler = { default-features = false, version = "6.0.0" }


# Substrate
frame-benchmarking = { default-features = false, optional = true, version = "29.0.0" }
frame-executive = { default-features = false, version = "29.0.0" }
frame-support = { default-features = false, version = "29.0.0" }
frame-system = { default-features = false, version = "29.0.0" }
frame-system-benchmarking = { default-features = false, optional = true, version = "29.0.0" }
frame-system-rpc-runtime-api = { default-features = false, version = "27.0.0" }
frame-try-runtime = { default-features = false, optional = true, version = "0.35.0" }
pallet-asset-tx-payment = { default-features = false, version = "29.0.0" }
pallet-aura = { default-features = false, version = "28.0.0" }
pallet-balances = { default-features = false, version = "29.0.0" }
pallet-collective = { default-features = false, version = "29.0.0" }
pallet-insecure-randomness-collective-flip = { default-features = false, version = "17.0.0" }
pallet-membership = { default-features = false, version = "29.0.0" }
pallet-message-queue = { default-features = false, version = "32.0.0" }
pallet-proxy = { default-features = false, version = "29.0.0" }
pallet-scheduler = { default-features = false, version = "30.0.0" }
pallet-timestamp = { default-features = false, version = "28.0.0" }
pallet-transaction-payment = { default-features = false, version = "29.0.0" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = "29.0.0" }
pallet-treasury = { default-features = false, version = "28.0.0" }
pallet-utility = { default-features = false, version = "29.0.0" }
sp-api = { default-features = false, version = "27.0.0" }
sp-block-builder = { default-features = false, version = "27.0.0" }
sp-consensus-aura = { default-features = false, version = "0.33.0" }
sp-core = { default-features = false, version = "29.0.0" }
sp-inherents = { default-features = false, version = "27.0.0" }
sp-offchain = { default-features = false, version = "27.0.0" }
sp-runtime = { default-features = false, version = "32.0.0" }
sp-session = { default-features = false, version = "28.0.0" }
sp-std = { default-features = false, version = "14.0.0" }
sp-transaction-pool = { default-features = false, version = "27.0.0" }
sp-version = { default-features = false, version = "30.0.0" }
sp-genesis-builder = { default-features = false, version = "0.8.0" }

# Polkadot dependencies
pallet-xcm = { default-features = false, version = "8.0.2" }
polkadot-parachain-primitives = { default-features = false, version = "7.0.0" }
polkadot-runtime-common = { default-features = false, version = "8.0.1" }
xcm = { package = "staging-xcm", default-features = false, version = "8.0.1" }
xcm-builder = { package = "staging-xcm-builder", default-features = false, version = "8.0.1" }
xcm-executor = { package = "staging-xcm-executor", default-features = false, version = "8.0.1" }

# Cumulus dependencies
cumulus-pallet-aura-ext = { default-features = false, version = "0.8.0" }
cumulus-pallet-dmp-queue = { default-features = false, version = "0.8.0" }
cumulus-pallet-parachain-system = { default-features = false, features = [
  "parameterized-consensus-hook",
], version = "0.8.1" }
cumulus-pallet-xcm = { default-features = false, version = "0.8.0" }
cumulus-pallet-xcmp-queue = { default-features = false, version = "0.8.0" }
cumulus-primitives-core = { default-features = false, version = "0.8.0" }
cumulus-primitives-utility = { default-features = false, version = "0.8.1" }
parachain-info = { package = "staging-parachain-info", default-features = false, version = "0.8.0" }
parachains-common = { default-features = false, version = "8.0.0" }
polkadot-core-primitives = { default-features = false, version = "8.0.0" }
polkadot-primitives = { default-features = false, version = "8.0.1" }

[build-dependencies]
substrate-wasm-builder = { optional = true, version = "18.0.0" }

[dev-dependencies]
# The Encointer pallets might not have compatible versions of `polkadot-sdk` with the rest of the system parachains,
# so we need to copy all the contents from `system-parachains-constants` and `kusama-runtime-constants`.
# We use these crates only for testing to ensure compatible values.
# NOTE: Do not add this to the `[dependencies]`
kusama-runtime-constants = { path = "../../relay/kusama/constants" }
system-parachains-constants = { path = "../constants" }

[features]
default = ["std"]
runtime-benchmarks = [
  "cumulus-pallet-dmp-queue/runtime-benchmarks",
  "cumulus-pallet-xcmp-queue/runtime-benchmarks",
  "cumulus-pallet-parachain-system/runtime-benchmarks",
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system-benchmarking/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "hex-literal",
  "pallet-balances/runtime-benchmarks",
  "pallet-collective/runtime-benchmarks",
  "pallet-encointer-balances/runtime-benchmarks",
  "pallet-encointer-bazaar/runtime-benchmarks",
  "pallet-encointer-ceremonies/runtime-benchmarks",
  "pallet-encointer-communities/runtime-benchmarks",
  "pallet-encointer-faucet/runtime-benchmarks",
  "pallet-encointer-reputation-commitments/runtime-benchmarks",
  "pallet-encointer-scheduler/runtime-benchmarks",
  "pallet-message-queue/runtime-benchmarks",
  "pallet-membership/runtime-benchmarks",
  "pallet-proxy/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "pallet-treasury/runtime-benchmarks",
  "pallet-utility/runtime-benchmarks",
  "pallet-xcm/runtime-benchmarks",
  "polkadot-runtime-common/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "xcm-builder/runtime-benchmarks",
  "xcm-executor/runtime-benchmarks",
]
std = [
  "codec/std",
  "cumulus-pallet-aura-ext/std",
  "cumulus-pallet-dmp-queue/std",
  "cumulus-pallet-parachain-system/std",
  "cumulus-pallet-xcm/std",
  "cumulus-pallet-xcmp-queue/std",
  "cumulus-primitives-core/std",
  "cumulus-primitives-utility/std",
  "encointer-balances-tx-payment-rpc-runtime-api/std",
  "encointer-balances-tx-payment/std",
  "encointer-primitives/serde_derive",
  "encointer-primitives/std",
  "frame-executive/std",
  "frame-support/std",
  "frame-system-rpc-runtime-api/std",
  "frame-system/std",
  "frame-try-runtime?/std",
  "log/std",
  "pallet-asset-tx-payment/std",
  "pallet-aura/std",
  "pallet-balances/std",
  "pallet-collective/std",
  "pallet-encointer-balances/std",
  "pallet-encointer-bazaar-rpc-runtime-api/std",
  "pallet-encointer-bazaar/std",
  "pallet-encointer-ceremonies-rpc-runtime-api/std",
  "pallet-encointer-ceremonies/std",
  "pallet-encointer-communities-rpc-runtime-api/std",
  "pallet-encointer-communities/std",
  "pallet-encointer-faucet/std",
  "pallet-encointer-reputation-commitments/std",
  "pallet-encointer-scheduler/std",
  "pallet-insecure-randomness-collective-flip/std",
  "pallet-message-queue/std",
  "pallet-membership/std",
  "pallet-proxy/std",
  "pallet-timestamp/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-transaction-payment/std",
  "pallet-treasury/std",
  "pallet-utility/std",
  "pallet-xcm/std",
  "parachain-info/std",
  "parachains-common/std",
  "scale-info/std",
  "sp-api/std",
  "sp-block-builder/std",
  "sp-consensus-aura/std",
  "sp-core/std",
  "sp-genesis-builder/std",
  "sp-inherents/std",
  "sp-offchain/std",
  "sp-runtime/std",
  "sp-session/std",
  "sp-std/std",
  "sp-transaction-pool/std",
  "sp-version/std",
  "substrate-wasm-builder",
  "xcm-builder/std",
  "xcm-executor/std",
  "xcm/std",
]


try-runtime = [
  "cumulus-pallet-aura-ext/try-runtime",
  "cumulus-pallet-dmp-queue/try-runtime",
  "cumulus-pallet-parachain-system/try-runtime",
  "cumulus-pallet-xcm/try-runtime",
  "cumulus-pallet-xcmp-queue/try-runtime",
  "frame-executive/try-runtime",
  "frame-system/try-runtime",
  "frame-try-runtime/try-runtime",
  "pallet-asset-tx-payment/try-runtime",
  "pallet-aura/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-collective/try-runtime",
  "pallet-encointer-balances/try-runtime",
  "pallet-encointer-bazaar/try-runtime",
  "pallet-encointer-ceremonies/try-runtime",
  "pallet-encointer-communities/try-runtime",
  "pallet-encointer-faucet/try-runtime",
  "pallet-encointer-reputation-commitments/try-runtime",
  "pallet-encointer-scheduler/try-runtime",
  "pallet-insecure-randomness-collective-flip/try-runtime",
  "pallet-message-queue/try-runtime",
  "pallet-membership/try-runtime",
  "pallet-proxy/try-runtime",
  "pallet-scheduler/try-runtime",
  "pallet-timestamp/try-runtime",
  "pallet-transaction-payment/try-runtime",
  "pallet-treasury/try-runtime",
  "pallet-utility/try-runtime",
  "pallet-xcm/try-runtime",
  "parachain-info/try-runtime",
]

experimental = ["pallet-aura/experimental"]

# A feature that should be enabled when the runtime should be built for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller, like logging for example.
on-chain-release-build = ["sp-api/disable-logging"]

